fix: maintain header text color on small windows

--- a/webui/src/scss/_variables.scss
+++ b/webui/src/scss/_variables.scss
@@ -7,6 +7,8 @@ $header-border: (
 	bottom: none,
 );
 $header-color: #fff;
+$header-brand-color: #fff;
+$header-brand-hover-color: #fff;
 $sidebar-bg: #111;
 $sidebar-brand-bg: adjust-color($header-bg, $lightness: -10%);
 
